# Helix

./: .gitignore  CMakeLists.txt  README.md
include/IGFD/: CMakeLists.txt  ImGuiFileDialog.h
include/helix/: CMakeLists.txt  HLX_pch.h
include/helix/core/: CMakeLists.txt  HLX_Application.h  HLX_Pixel.cpp  HLX_Pixel.h  HLX_PixelGrid.cpp  HLX_PixelGrid.h
include/helix/core/image/: HLX_Image.cpp  HLX_Image.h
include/helix/core/pixelgrid/: HLX_Pixel.cpp  HLX_Pixel.h  HLX_PixelGrid.cpp  HLX_PixelGrid.h
include/helix/core/renderer/: HLX_Renderer.cpp  HLX_Renderer.h
include/helix/core/tools/: HLX_Palette.h  HLX_Toolbar.h  HLX_Toolbox.h
include/helix/core/window/: HLX_Window.cpp  HLX_Window.h
include/helix/events/: CMakeLists.txt  HLX_EventCallbackHandler.cpp  HLX_EventCallbackHandler.h  HLX_EventSystem.cpp  HLX_EventSystem.h  HLX_Subscriber.h
include/helix/gui/: CMakeLists.txt  HLX_Gui.cpp  HLX_Gui.h  HLX_GuiElement.h
include/helix/gui/elements/: HLX_Toolbar.h
include/helix/utility/: CMakeLists.txt  HLX_Constants.h  HLX_Types.h
include/imgui/: CMakeLists.txt
include/imgui/backends/: imgui_impl_sdl3.h  imgui_impl_sdlrenderer3.h
include/imgui/example_sdl3_sdlrenderer3/: imgui.ini  main.cpp
include/stb_image/: CMakeLists.txt
src/: CMakeLists.txt  Helix.cpp  Helix.h  main.cpp
tests/: CMakeLists.txt  HLX_EventSystemTest.cpp
